<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    tools:context=".ui.about_us.AboutUsFragment">
    <View
        android:id="@+id/about_us_vw_title"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/radius_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.594"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/admin_text_title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_about_us"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/about_us_vw_title"
        app:layout_constraintEnd_toEndOf="@+id/about_us_vw_title"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/about_us_vw_title"
        app:layout_constraintTop_toTopOf="@+id/about_us_vw_title"
        app:layout_constraintVertical_bias="0.6" />

    <View
        android:id="@+id/about_us_vw_container"
        android:layout_width="match_parent"
        android:layout_height="480dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/radius_btn"
        app:layout_constraintTop_toBottomOf="@+id/about_us_vw_title"
        android:layout_marginBottom="120dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.cardview.widget.CardView
        android:id="@+id/about_us_vw_image"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:layout_constraintStart_toStartOf="@+id/about_us_vw_container"
        app:layout_constraintEnd_toEndOf="@+id/about_us_vw_container"
        app:layout_constraintTop_toTopOf="@+id/about_us_vw_container"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="20dp">
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/example_image"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:text="@string/about_us_tv_title"
            android:background="#80513980"
            android:layout_marginTop="218dp"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:text="@string/about_us_tv_descrition"
        app:layout_constraintStart_toStartOf="@+id/about_us_vw_container"
        app:layout_constraintEnd_toEndOf="@+id/about_us_vw_container"
        app:layout_constraintTop_toBottomOf="@+id/about_us_vw_image" />
    <androidx.cardview.widget.CardView
        android:layout_width="70dp"
        android:layout_height="50dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/about_us_tv_copyright"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="5dp">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_em_solution" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/about_us_tv_copyright"
        android:layout_width="240dp"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="10dp"
        android:text="@string/about_us_copyright" />



</androidx.constraintlayout.widget.ConstraintLayout>
