<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    tools:context=".ui.EditProductActivity">

    <ImageView
        android:id="@+id/edit_product_iv_back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back_arrow" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_0_16"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.16" />

    <androidx.cardview.widget.CardView
        android:id="@+id/edit_product_cv_image"
        android:layout_width="300dp"
        android:layout_height="250dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_0_16">

        <ImageView
            android:id="@+id/edit_product_iv_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/edit_cv_change"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="@+id/edit_product_cv_image"
        app:layout_constraintTop_toTopOf="@+id/edit_product_cv_image">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/edit_product_bt_edit_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ic_edit"
            android:scaleType="fitXY"
            android:scaleX="0.5"
            android:scaleY="0.5" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_product_cv_image">

        <EditText
            android:id="@+id/edit_product_et_barcode"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginVertical="10dp"
            android:layout_weight="1"
            android:background="@drawable/radius_btn"
            android:gravity="center"
            android:hint="@string/add_barcode"
            android:textAlignment="center"
            android:textColorHint="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edit_product_et_name_product"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginVertical="10dp"
            android:layout_weight="1"
            android:background="@drawable/radius_btn"
            android:gravity="center"
            android:hint="@string/add_name"
            android:textAlignment="center"
            android:textColorHint="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edit_product_et_description"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginVertical="10dp"
            android:layout_weight="1"
            android:background="@drawable/radius_btn"
            android:gravity="center"
            android:hint="@string/add_description"
            android:textAlignment="center"
            android:textColorHint="@color/white"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/edit_product_ll_amount"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="40dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_product_et_amount"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/radius_btn"
                android:gravity="center"
                android:hint="@string/add_amount"
                android:textAlignment="center"
                android:textColorHint="@color/white"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/edit_product_bt_arrow_down"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:background="@drawable/edit_down"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/edit_product_bt_arrow_up"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:background="@drawable/edit_up"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/edit_product_et_price"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="10dp"
            android:layout_weight="1"
            android:background="@drawable/radius_btn"
            android:gravity="center"
            android:hint="@string/add_price"
            android:textAlignment="center"
            android:textColorHint="@color/white"
            android:textSize="16sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>